<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Evaluation of Diagnostic Tests</string>
    <string name="evaluate">Evaluate</string>
    <string name="more_apps">More Apps by this Developer</string>
    <string name="banner_ad_id" translatable="false">ca-app-pub-2838402743054690/7511134133</string>

    <string name="add_data">Add data</string>
    <string name="condition_present">Condition\nPresent</string>
    <string name="condition_absent">Condition\nAbsent</string>
    <string name="positive_test">Positive\nTest</string>
    <string name="negative_test">Negative\nTest</string>
    <string name="A" translatable="false">A</string>
    <string name="B" translatable="false">B</string>
    <string name="C" translatable="false">C</string>
    <string name="D" translatable="false">D</string>
    <string name="AB" translatable="false">A + B</string>
    <string name="AC" translatable="false">A + C</string>
    <string name="BD" translatable="false">B + D</string>
    <string name="CD" translatable="false">C + D</string>
    <string name="total">Total</string>
    <string name="clear">Clear</string>
    <string name="calc">Calculate</string>
    <string name="toast_values_empty">Please, fill out all inputs</string>

    <string name="subjects">Subjects</string>
    <string name="result">Result</string>
</resources>